--- a/index.html
+++ b/index.html
@@ -89,5 +89,6 @@
 </head>
   <body class="bg-white text-slate-900 h-screen w-full overflow-hidden selection:bg-primary-500 selection:text-white">
     <div id="root" class="h-full w-full"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
